添加JD-导航条练习

--- a/exercise/jd_vertical.html
+++ b/exercise/jd_vertical.html
@@ -34,9 +34,9 @@
 </head>
 <body>
     <ul class="img-list">
-        <li><a href="javascript:;"><img src="../img/jd_1.webp" alt="jd_1.webp"></a></li>
-        <li><a href="javascript:;"><img src="../img/jd_2.webp" alt="jd_2.webp"></a></li>
-        <li><a href="javascript:;"><img src="../img/jd_3.webp" alt="jd_3.webp"></a></li>
+        <li><a href="javascript:;"><img src="../img/jd_img_list/jd_1.webp" alt="jd_1.webp"></a></li>
+        <li><a href="javascript:;"><img src="../img/jd_img_list/jd_2.webp" alt="jd_2.webp"></a></li>
+        <li><a href="javascript:;"><img src="../img/jd_img_list/jd_3.webp" alt="jd_3.webp"></a></li>
     </ul>
 </body>
 </html>
